<?xml version="1.0"?>
<package format="2">
  <name>cartesian_controllers</name>
  <version>0.1.0</version>
  <description> cartesian_controllers provides cartesian interface and 
  	online cartesian trajectory generation for ros_control</description>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>
  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cartesian_control_msgs</exec_depend>
  <exec_depend>cartesian_trajectory</exec_depend>
  <exec_depend>cartesian_trajectory_adapter</exec_depend>
  <exec_depend>trajectory_generation</exec_depend>
  <export>
    <metapackage/>
  </export>
</package>
