<?xml version="1.0"?>
<package format="2">
  <name>cartesian_trajectory</name>
  <version>0.1.0</version>
  <description> cartesian_trajectory provides a common interface for
  cartesian trajectories </description>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>
  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf2_eigen</depend>
  <depend>cartesian_control_msgs</depend>
</package>