<?xml version="1.0"?>
<package format="2">
  <name>trajectory_generation</name>
  <version>0.1.0</version>
  <description> cartesian_trajectory_controllers provides online cartesian 
  trajectory execution using actionlibs </description>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>
  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>cartesian_trajectory</depend>
  <depend>cartesian_control_msgs</depend>
  
</package>